--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "hyperfocus",
   "private": true,
@@ -10,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "0.2.1",
+    "@google/genai": "^0.21.0",
     "canvas-confetti": "^1.9.2",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
